--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 target/
+out/
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
@@ -6,7 +7,9 @@ pom.xml.next
 release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
+*.iml
 
 .project
 .classpath
 .settings/
+.idea
