--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.magusgeek</groupId>
-    <artifactId>cg-arena</artifactId>
+    <groupId>svivien</groupId>
+    <artifactId>cg-arena-gui</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>CodingGame arena GUI</name>
 
@@ -67,7 +67,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>com.magusgeek.cg.arena.fx.Main</mainClass>
+                            <mainClass>svivien.cg.arena.fx.Main</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
@@ -86,7 +86,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.magusgeek.cg.arena.fx.Main</mainClass>
+                                    <mainClass>svivien.cg.arena.fx.Main</mainClass>
                                 </transformer>
                                 <transformer implementation="com.github.edwgiz.mavenShadePlugin.log4j2CacheTransformer.PluginsCacheFileTransformer"/>
                             </transformers>
